# H100Knock

./: .gitignore  AGENTS.md  HaskellPractice.cabal  flake.nix
app/: Main.hs
src/HaskellPractice/: Lib.hs
src/HaskellPractice/Problems/: Basic.hs  Intermediate.hs
test/HaskellPractice/: LibSpec.hs  ProblemsSpec.hs
test/HaskellPractice/Problems/: IntermediateSpec.hs
